Agregar configuración de puerto para Render

--- a/src/main/resources/application-sqlite.properties
+++ b/src/main/resources/application-sqlite.properties
@@ -2,6 +2,9 @@
 # CONFIGURACIÓN PARA SQLITE (RENDER)
 # ========================================
 
+# Server Port
+server.port=${PORT:8080}
+
 # Database SQLite
 spring.datasource.url=jdbc:sqlite:./data/onpe.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
